--- a/pagination.html
+++ b/pagination.html
@@ -18,7 +18,10 @@
                 <!-- <h2>default</h2> -->
                 <button class="pagination_begin"><i class="fas fa-angle-double-left"></i></button>
                 <button class="pagination_prev active"><i class="fas fa-angle-left"></i></button>
-                <div class="pagination_pages"></div>
+                <ul class="pagination_pages">
+                  <li class="page on">1</li>
+                  <li class="page">2</li>
+                </ul>
                 <button class="pagination_next"><i class="fas fa-angle-right"></i></button>
                 <button class="pagination_last"><i class="fas fa-angle-double-right"></i></button>
               </div>
@@ -28,9 +31,27 @@
       </body>
 </body>
 <script>
+window.onload = function () {
+
   const tCount = 100;
   let page = 1
   const limit = 30
   const block = 10
+
+  page = tCount / limit
+
+  let blockCount = page / block
+
+  const pageButton = document.querySelectorAll(".pagination_pates > .page")
+
+  pageButton.forEach(function(ev){
+    ev.addEventListener('click',function(el){
+      ev.target.classList.remove('on')
+      el.target.classList.add('on')
+    })
+  })
+  console.log("jdfjdjf")
+  
+}
 </script>
 </html>
