--- a/pagination.html
+++ b/pagination.html
@@ -20,6 +20,7 @@
           <ul class="pagination_pages">
             <li class="page on">1</li>
             <li class="page">2</li>
+            <li class="page">3</li>
           </ul>
           <button class="pagination_next"><i class="fas fa-angle-right"></i></button>
           <button class="pagination_last"><i class="fas fa-angle-double-right"></i></button>
