--- a/과제/index.html
+++ b/과제/index.html
@@ -102,7 +102,7 @@
     if (curIndex <= 0) {
       slideBtnPrev.classList.add("disabled")
     } else {
-      slideBtnPrev.classList.remove("disabled")
+      slideBtnPrev.classList.remove("disabled") //확인
     }
   }
   disabled()
