--- a/pagination.html
+++ b/pagination.html
@@ -117,12 +117,12 @@ window.onload = function () {
   // const nextNumber = 
   prevButton.addEventListener("click", function () {
     removeOn()
-    active()
+    drawPage(1)
   })
 
   nextButton.addEventListener("click", function () {
     removeOn()
-    active()
+    drawPage(1)
   })
 
  
