--- a/pagination.html
+++ b/pagination.html
@@ -78,6 +78,7 @@ window.onload = function () {
     block = Math.ceil(page/limitPage)
     page = page  + num
     addList()
+    console.log(page)
   }
 
   function addList() {
