--- a/pagination.html
+++ b/pagination.html
@@ -77,6 +77,7 @@ window.onload = function () {
     paginationPages.innerHTML = ""
     block = Math.ceil(page/limitPage)
     page = page  + num
+    active()
     addList()
     console.log(page)
   }
@@ -145,7 +146,7 @@ window.onload = function () {
   // 화살표버튼 비활성화
  function active() {
    const pagesLength = paginationPages.children.length
-   
+   console.log(page)
    if(page === 1) {
     beginButton.classList.remove("active")
     prevButton.classList.remove("active")
