--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <li data-cont="under_construction.html"><span>List</span></li>
               <li data-cont="modal.html"><span>Modal</span></li>
               <li data-cont="under_construction.html"><span>Popup</span></li>
-              <li data-cont="pagination.html"><span>Pagination</span></li>
+              <!-- <li data-cont="pagination.html"><span>Pagination</span></li> -->
               <li data-cont="progress.html"><span>Progress</span></li>
               <li data-cont="selector.html"><span>Selector</span></li>
               <li data-cont="table.html"><span>Table</span></li>
